{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 33,
  "lineage": "12fffd68-a7d1-9e04-d3e3-56f36eeb9b2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "taskflow_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0814f484543dde16f",
            "arn": "arn:aws:ec2:ap-south-1:884686184497:elastic-ip/eipalloc-0814f484543dde16f",
            "association_id": "eipassoc-03cd9a7e0073f99c3",
            "domain": "vpc",
            "id": "eipalloc-0814f484543dde16f",
            "instance": "i-0075e586e3e0acfd5",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-081c3ab001dfbf29d",
            "private_dns": "ip-10-0-1-57.ap-south-1.compute.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-65-1-41-93.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.41.93",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "taskflow-eip"
            },
            "tags_all": {
              "Name": "taskflow-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884686184497",
            "id": "eipalloc-0814f484543dde16f",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "taskflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-050c78efa486a0196",
            "arn": "arn:aws:ec2:ap-south-1:884686184497:instance/i-0075e586e3e0acfd5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "taskflow-ec2-instance-profile",
            "id": "i-0075e586e3e0acfd5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "taskflow-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-081c3ab001dfbf29d"
              }
            ],
            "primary_network_interface_id": "eni-081c3ab001dfbf29d",
            "private_dns": "ip-10-0-1-57.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-65-1-41-93.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.41.93",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03fffae59598109c7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0134897afbd132792",
            "tags": {
              "Name": "taskflow-server",
              "Project": "TaskFlow"
            },
            "tags_all": {
              "Name": "taskflow-server",
              "Project": "TaskFlow"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-003ac68e2151b156f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884686184497",
            "id": "i-0075e586e3e0acfd5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.taskflow_ec2_profile",
            "aws_iam_role.taskflow_ec2_role",
            "aws_key_pair.taskflow_key",
            "aws_security_group.taskflow_sg",
            "aws_subnet.taskflow_public_subnet",
            "aws_vpc.taskflow_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "taskflow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884686184497:internet-gateway/igw-0891e0ef1f415045e",
            "id": "igw-0891e0ef1f415045e",
            "owner_id": "884686184497",
            "region": "ap-south-1",
            "tags": {
              "Name": "taskflow-igw",
              "Project": "TaskFlow"
            },
            "tags_all": {
              "Name": "taskflow-igw",
              "Project": "TaskFlow"
            },
            "vpc_id": "vpc-0a53f3f9d0fcd5173"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884686184497",
            "id": "igw-0891e0ef1f415045e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "taskflow_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884686184497:route-table/rtb-0fe7f6f9c8f4f5949",
            "id": "rtb-0fe7f6f9c8f4f5949",
            "owner_id": "884686184497",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0891e0ef1f415045e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "taskflow-public-route-table",
              "Project": "TaskFlow"
            },
            "tags_all": {
              "Name": "taskflow-public-route-table",
              "Project": "TaskFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a53f3f9d0fcd5173"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884686184497",
            "id": "rtb-0fe7f6f9c8f4f5949",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.taskflow_igw",
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "taskflow_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de9a8ab5e868db8b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fe7f6f9c8f4f5949",
            "subnet_id": "subnet-0134897afbd132792"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884686184497",
            "id": "rtbassoc-0de9a8ab5e868db8b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.taskflow_igw",
            "aws_route_table.taskflow_public_rt",
            "aws_subnet.taskflow_public_subnet",
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "taskflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884686184497:security-group/sg-003ac68e2151b156f",
            "description": "Security group for TaskFlow Kubernetes server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003ac68e2151b156f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TaskFlow application",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "taskflow-sg",
            "name_prefix": "",
            "owner_id": "884686184497",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-sg",
              "Project": "TaskFlow"
            },
            "tags_all": {
              "Name": "taskflow-sg",
              "Project": "TaskFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a53f3f9d0fcd5173"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884686184497",
            "id": "sg-003ac68e2151b156f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "taskflow_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884686184497:subnet/subnet-0134897afbd132792",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0134897afbd132792",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884686184497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "taskflow-public-subnet",
              "Project": "TaskFlow"
            },
            "tags_all": {
              "Name": "taskflow-public-subnet",
              "Project": "TaskFlow"
            },
            "vpc_id": "vpc-0a53f3f9d0fcd5173"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884686184497",
            "id": "subnet-0134897afbd132792",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "taskflow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884686184497:vpc/vpc-0a53f3f9d0fcd5173",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df0a97ba709e621a",
            "default_route_table_id": "rtb-06640df7613f88c0c",
            "default_security_group_id": "sg-0b3607dd08d34702b",
            "dhcp_options_id": "dopt-06385186dd77df078",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a53f3f9d0fcd5173",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06640df7613f88c0c",
            "owner_id": "884686184497",
            "region": "ap-south-1",
            "tags": {
              "Name": "taskflow-vpc",
              "Project": "TaskFlow"
            },
            "tags_all": {
              "Name": "taskflow-vpc",
              "Project": "TaskFlow"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884686184497",
            "id": "vpc-0a53f3f9d0fcd5173",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}